--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
         <script src="js/labels.js"></script>
         <script src="data/Roads_1.js"></script>
         <script src="data/Rivers_2.js"></script>
-        <script src="data/Cameratraplocations_3.js"></script>
-        <script src="data/01_Import_photo_output_4.js"></script>
+        <script src="data/Cameratrappingimages_3.js"></script>
         <script>
         var highlightLayer;
         function highlightFeature(e) {
@@ -53,7 +52,7 @@
         }
         var map = L.map('map', {
             zoomControl:true, maxZoom:27, minZoom:1
-        }).fitBounds([[-22.10087771353093,28.98191521455422],[-22.065501590501313,29.11090231786243]]);
+        }).fitBounds([[-22.13697333051447,28.981568251397903],[-22.047000869112612,29.14774390093484]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
@@ -108,7 +107,7 @@
                 dashArray: '',
                 lineCap: 'square',
                 lineJoin: 'bevel',
-                weight: 3.0,
+                weight: 2.0,
                 fillOpacity: 0,
                 interactive: true,
             }
@@ -147,6 +146,9 @@
                     <tr>\
                         <td colspan="2">' + (feature.properties['id'] !== null ? autolinker.link(feature.properties['id'].toLocaleString()) : '') + '</td>\
                     </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['Merge ID'] !== null ? autolinker.link(feature.properties['Merge ID'].toLocaleString()) : '') + '</td>\
+                    </tr>\
                 </table>';
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
@@ -159,7 +161,7 @@
                 dashArray: '',
                 lineCap: 'square',
                 lineJoin: 'bevel',
-                weight: 3.0,
+                weight: 2.0,
                 fillOpacity: 0,
                 interactive: true,
             }
@@ -178,76 +180,7 @@
         });
         bounds_group.addLayer(layer_Rivers_2);
         map.addLayer(layer_Rivers_2);
-        function pop_Cameratraplocations_3(feature, layer) {
-            layer.on({
-                mouseout: function(e) {
-                    for (i in e.target._eventParents) {
-                        e.target._eventParents[i].resetStyle(e.target);
-                    }
-                    if (typeof layer.closePopup == 'function') {
-                        layer.closePopup();
-                    } else {
-                        layer.eachLayer(function(feature){
-                            feature.closePopup()
-                        });
-                    }
-                },
-                mouseover: highlightFeature,
-            });
-            var popupContent = '<table>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['id'] !== null ? autolinker.link(feature.properties['id'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['Location'] !== null ? autolinker.link(feature.properties['Location'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['X'] !== null ? autolinker.link(feature.properties['X'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['Y'] !== null ? autolinker.link(feature.properties['Y'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                </table>';
-            layer.bindPopup(popupContent, {maxHeight: 400});
-        }
-
-        function style_Cameratraplocations_3_0() {
-            return {
-                pane: 'pane_Cameratraplocations_3',
-                radius: 3.199999999999997,
-                opacity: 1,
-                color: 'rgba(128,67,36,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 2.0,
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(172,91,49,1.0)',
-                interactive: true,
-            }
-        }
-        map.createPane('pane_Cameratraplocations_3');
-        map.getPane('pane_Cameratraplocations_3').style.zIndex = 403;
-        map.getPane('pane_Cameratraplocations_3').style['mix-blend-mode'] = 'normal';
-        var layer_Cameratraplocations_3 = new L.geoJson(json_Cameratraplocations_3, {
-            attribution: '',
-            interactive: true,
-            dataVar: 'json_Cameratraplocations_3',
-            layerName: 'layer_Cameratraplocations_3',
-            pane: 'pane_Cameratraplocations_3',
-            onEachFeature: pop_Cameratraplocations_3,
-            pointToLayer: function (feature, latlng) {
-                var context = {
-                    feature: feature,
-                    variables: {}
-                };
-                return L.circleMarker(latlng, style_Cameratraplocations_3_0(feature));
-            },
-        });
-        bounds_group.addLayer(layer_Cameratraplocations_3);
-        map.addLayer(layer_Cameratraplocations_3);
-        function pop_01_Import_photo_output_4(feature, layer) {
+        function pop_Cameratrappingimages_3(feature, layer) {
             layer.on({
                 mouseout: function(e) {
                     for (i in e.target._eventParents) {
@@ -267,10 +200,7 @@
                     <tr>\
                         <td colspan="2">' + (feature.properties['Name'] !== null ? autolinker.link(feature.properties['Name'].toLocaleString()) : '') + '</td>\
                     </tr>\
-                    <tr>\
-                        <td colspan="2">' + (feature.properties['RelPath'] !== null ? autolinker.link(feature.properties['RelPath'].toLocaleString()) : '') + '</td>\
-                    </tr>\
-                    <tr>\
+                                        <tr>\
                         <td colspan="2"><img src "'+ feature.properties['RelPath']+'"></td>\
                     </tr>\
                     <tr>\
@@ -280,9 +210,9 @@
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
 
-        function style_01_Import_photo_output_4_0() {
+        function style_Cameratrappingimages_3_0() {
             return {
-                pane: 'pane_01_Import_photo_output_4',
+                pane: 'pane_Cameratrappingimages_3',
                 radius: 4.0,
                 opacity: 1,
                 color: 'rgba(35,35,35,1.0)',
@@ -296,26 +226,28 @@
                 interactive: true,
             }
         }
-        map.createPane('pane_01_Import_photo_output_4');
-        map.getPane('pane_01_Import_photo_output_4').style.zIndex = 404;
-        map.getPane('pane_01_Import_photo_output_4').style['mix-blend-mode'] = 'normal';
-        var layer_01_Import_photo_output_4 = new L.geoJson(json_01_Import_photo_output_4, {
+        map.createPane('pane_Cameratrappingimages_3');
+        map.getPane('pane_Cameratrappingimages_3').style.zIndex = 403;
+        map.getPane('pane_Cameratrappingimages_3').style['mix-blend-mode'] = 'normal';
+        var layer_Cameratrappingimages_3 = new L.geoJson(json_Cameratrappingimages_3, {
             attribution: '',
             interactive: true,
-            dataVar: 'json_01_Import_photo_output_4',
-            layerName: 'layer_01_Import_photo_output_4',
-            pane: 'pane_01_Import_photo_output_4',
-            onEachFeature: pop_01_Import_photo_output_4,
+            dataVar: 'json_Cameratrappingimages_3',
+            layerName: 'layer_Cameratrappingimages_3',
+            pane: 'pane_Cameratrappingimages_3',
+            onEachFeature: pop_Cameratrappingimages_3,
             pointToLayer: function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.circleMarker(latlng, style_01_Import_photo_output_4_0(feature));
+                return L.circleMarker(latlng, style_Cameratrappingimages_3_0(feature));
             },
         });
-        bounds_group.addLayer(layer_01_Import_photo_output_4);
-        map.addLayer(layer_01_Import_photo_output_4);
+        bounds_group.addLayer(layer_Cameratrappingimages_3);
+        map.addLayer(layer_Cameratrappingimages_3);
+        var baseMaps = {};
+        L.control.layers(baseMaps,{'<img src="legend/Cameratrappingimages_3.png" /> Camera trapping images': layer_Cameratrappingimages_3,'<img src="legend/Rivers_2.png" /> Rivers': layer_Rivers_2,'<img src="legend/Roads_1.png" /> Roads': layer_Roads_1,"OSM Standard": layer_OSMStandard_0,}).addTo(map);
         setBounds();
         </script>
     </body>
